- GApplicationPar::was_queried()
- operator==(GSkyPixel&, GSkyPixel&)
- operator!=(GSkyPixel&, GSkyPixel&)
- GPha::operator(int&, int&)
- GPha::operator[](std::string&)
- GPha::columns()
- GPha::at(int&, int&)
- GPha::append(std::string&, std::vector<double>&)
- GPha::obs_emin(GEnergy&)
- GPha::obs_emin()
- GPha::obs_emax(GEnergy&)
- GPha::obs_emax()
- GFitsHeaderCard boolean constructor
- GCTAInstDir::theta()
- GCTAInstDir::phi()
- GCTAEventAtom(GCTAInstDir&, GEnergy&, GTime&)
- GCTABackground::rate_ebin()
- GCTABackgroundPerfTable::rate_ebin()
- GCTABackground3D::rate_ebin()
- GCTAEdisp::prob_erecobin()
- GCTAEdispPerfTable::prob_erecobin()
- GCTAEdispRmf::prob_erecobin()
- GCTAEdisp2D::prob_erecobin()
- GCTAModelRadialAcceptance::radial(GCTAModelRadial*)
- GCTAModelRadialAcceptance::spectral(GModelSpectral*)
- GCTAModelRadialAcceptance::temporal(GModelTemporal*)
- GModelSpatialRadialProfileGauss(GSkyDir&, double&)
- GModelSpatialRadialProfileGauss::sigma()

The following methods have been removed:
- none

The following methods have been renamed:
- none

The arguments for the following methods have been changed:
- GCTAOnOffObservation CTA observation constructor now takes a spatial model component

The return value of the following methods has been changed:
- none


3. Configuration
-----------------
Keep existing library path in installation script on Mac OS X (#2420)


4. Application module
---------------------
The GApplicationPar::query() method was made public.

Add GApplicationPar::was_queried() method and do no longer change the mode
of queried parameters to hidden. This makes sure that the correct mode will
be written to the parfile, also for q-mode parameters (#2495).


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
None


7. Linear algebra module
------------------------
None


8. Model module
---------------
Add a GModelSpatialRadialProfileGauss() position and width constructor, add