@@ -1,7 +1,7 @@
 /***************************************************************************
  *                   GFitsHDU.i - FITS HDU handling class                  *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2008-2017 by Juergen Knoedlseder                         *
+ *  copyright (C) 2008-2018 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -81,6 +81,9 @@ public:
                             const std::string& comment);
     void               card(const std::string& keyname,
                             const int& value,
+                            const std::string& comment);
+    void               card(const std::string& keyname,
+                            const bool& value,
                             const std::string& comment);
     std::string        string(const std::string& keyname) const;
     double             real(const std::string& keyname) const;
